fix(react-grid-bootstrap4): make resize control visible on resizing

--- a/packages/dx-styles/dx-grid-bs4.scss
+++ b/packages/dx-styles/dx-grid-bs4.scss
@@ -163,6 +163,11 @@ button.dx-g-bs4-table-edit-command-cell {
     }
   }
  }
+
+ .dx-g-bs4-resizing-control-wrapper-active {
+  opacity: 1;
+ }
+
 .dx-g-bs4-resize-control-line {
   opacity: 1;
   position: absolute;
